--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "K1_Series_Annex"]
 	path = K1_Series_Annex
 	url = https://github.com/CrealityOfficial/K1_Series_Annex.git
+[submodule "K1_Max_Install_Helper"]
+	path = K1_Max_Install_Helper
+	url = https://github.com/Guilouz/Creality-K1-and-K1-Max.git
